[gd_scene load_steps=5 format=3 uid="uid://buhm0e2j51ldf"]

[ext_resource type="Script" uid="uid://hnttouse8812" path="res://scripts/ui/warning_overlay.gd" id="1_bx5hw"]

[sub_resource type="Animation" id="Animation_8qqdl"]
resource_name = "flash"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.133333, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0.619608, 0.00392157, 0.00784314, 0), Color(0.619608, 0.00392157, 0.00784314, 0.298039), Color(0.619608, 0.00392157, 0.00784314, 0)]
}

[sub_resource type="Animation" id="Animation_bx5hw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.619608, 0.00392157, 0.00784314, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ak147"]
_data = {
&"RESET": SubResource("Animation_bx5hw"),
&"flash": SubResource("Animation_8qqdl")
}

[node name="WarningOverlay" type="CanvasLayer"]
script = ExtResource("1_bx5hw")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.619608, 0.00392157, 0.00784314, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_ak147")
}

[node name="WarningFlashTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="WarningFlashTimer" to="." method="_on_warning_flash_timer_timeout"]
